--- a/src/assets/scss/layout/basic.scss
+++ b/src/assets/scss/layout/basic.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-	font-family: $font-regular, "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+	font-family: $font-regular, "Helvetica", "sans-serif";
 	color: $color-black-medium;
 }
 
