--- a/src/assets/js/templates/home.html
+++ b/src/assets/js/templates/home.html
@@ -56,3 +56,65 @@
     </div>
   </div>
 </div>
+<div class="clearfix"></div>
+<div class="personal-products">
+  <h1 class="center-block">Produkte, die Ihren Wünschen entsprechen</h1>
+  <div class="product-block col-md-12">
+    <div class="row">
+      <div class="img col-md-4">
+        <img src="assets/images/red-glasses.png" />
+      </div>
+      <div class="properties col-md-4">
+        <h3>Funchal</h3>
+        <ul>
+          <li>
+            <input type="checkbox" name="checkbox1" id="checkbox1" class="css-checkbox" checked="checked">
+            <label for="checkbox1" class="css-label">Brillentyp: Damen, Herren</label>
+          </li>
+          <li>
+            <input type="checkbox" name="checkbox2" id="checkbox2" class="css-checkbox" checked="checked">
+            <label for="checkbox2" class="css-label">Rahmentyp: Randlose Brille</label>
+          </li>
+          <li>
+            <input type="checkbox" name="checkbox3" id="checkbox3" class="css-checkbox" checked="checked">
+            <label for="checkbox3" class="css-label">Eckiger Rahmen</label>
+          </li>
+          <li>
+            <input type="checkbox" name="checkbox4" id="checkbox4" class="css-checkbox" checked="checked">
+            <label for="checkbox4" class="css-label">Ovaler Rahmen</label>
+          </li>
+          <li>
+            <input type="checkbox" name="checkbox5" id="checkbox5" class="css-checkbox" checked="checked">
+            <label for="checkbox5" class="css-label">Runder Rahmen</label>
+          </li>
+          <li>
+            <input type="checkbox" name="checkbox6" id="checkbox6" class="css-checkbox" checked="checked">
+            <label for="checkbox6" class="css-label">Stil: casual, extravagant</label>
+          </li>
+          <li>
+            <input type="checkbox" name="checkbox7" id="checkbox7" class="css-checkbox">
+            <label for="checkbox7" class="css-label">Einstärkenbrille</label>
+          </li>
+          <li>
+            <input type="checkbox" name="checkbox8" id="checkbox8" class="css-checkbox">
+            <label for="checkbox8" class="css-label">Material: Metall</label>
+          </li>
+        </ul>
+        <a href="javascript:#">
+          mehr Attribute anzeigen <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </a>
+      </div>
+      <div class="get-product col-md-4">
+        <div class="price">
+          <p>
+            <span>Rahmen inkl. Gläser &amp; Service</span><br />
+            ab 39,90 &euro;
+          </p>
+        </div>
+        <div class="product-button-link">
+          <button type="button" name="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Zum Produkt</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
