--- a/src/assets/js/templates/home.html
+++ b/src/assets/js/templates/home.html
@@ -8,8 +8,8 @@
       <li class="arrow active">5</li>
   	</ul>
   </div>
-  <h3 class="title">Welche Gesichtsform haben Sie?</h3>
   <div class="facial-structure">
+    <h3 class="title">Welche Gesichtsform haben Sie?</h3>
     <div class="col-sm-12">
       <div class="row">
         <div class="item col-md-3">
@@ -46,13 +46,44 @@
         </div>
       </div>
     </div>
-    <div class="navigation">
-      <div class="next pull-right">
-        Weiter <button type="button" name="button"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
+  </div>
+  <div class="facial-dependency">
+    <h3 class="title">Welche Anforderungen stellen Sie an die Fassung?</h3>
+    <div class="col-sm-12">
+      <div class="row">
+        <div class="item col-md-4">
+          <div class="img">
+            <img src="assets/images/glass-1.png" />
+          </div>
+          <div class="options">
+            <input type="checkbox" name="name" value=""> Bruchsicher &amp; rostfrei: Metall-Fassungen</input> <span class="info">i</span>
+          </div>
+        </div>
+        <div class="item col-md-4">
+          <div class="img">
+            <img src="assets/images/glass-2.png" />
+          </div>
+          <div class="options">
+            <input type="checkbox" name="name" value=""> Farbenfroh: Kunststoff-Fassungen</input> <span class="info">i</span>
+          </div>
+        </div>
+        <div class="item col-md-4">
+          <div class="img">
+            <img src="assets/images/glass-3.png" />
+          </div>
+          <div class="options">
+            <input type="checkbox" name="name" value=""> Leicht &amp; Stabil: Titan-Fassungen</input> <span class="info">i</span>
+          </div>
+        </div>
       </div>
-      <div class="previous pull-left">
-        <button type="button" name="button"><i class="fa fa-angle-left" aria-hidden="true"></i></button> Zurück
-      </div>
+    </div>
+  </div>
+  <div class="navigation">
+    <div class="next pull-right">
+      Weiter <button type="button" id="next" name="button"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
+    </div>
+    <div class="previous pull-left">
+      <button type="button" id="previous" name="button"><i class="fa fa-angle-left" aria-hidden="true"></i></button> Zurück
     </div>
   </div>
 </div>
