--- a/src/assets/scss/templates/home.scss
+++ b/src/assets/scss/templates/home.scss
@@ -112,7 +112,7 @@
         text-transform: uppercase;
       }
       ul {
-        @include rem((margin: 5px 0));
+        @include rem((margin: 10px 0));
         @include rem((padding-left: 0));
         li {
           list-style-type: none;
@@ -155,6 +155,7 @@
         }
       }
       a {
+        @include rem(font-size, 14px);
         font-weight: bold;
         text-decoration: none;
         color: $color-black-medium;
